wp-content/themes/archivepoliticalads/style.css
/* ... */
.comment-author img {
    border: none;
    border-radius: 50%;
    width: 56px;
    height: 56px;
}
.comment-author cite {
    font-size: 18px;
    color: #4a90e2;
    font-weight: 700;
    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
    font-style: normal;
}
.comment-author span.says {
    font-size: 18px;
    color: #9b9b9b;
}
.comment-meta.commentmetadata a {
    color: #9b9b9b;
    font-size: 14px;
}
.comment-body p {
    font-size: 18px;
    color: #343434;
    margin-bottom: 100px;
}
.reply a {
    color: #fff;
}
.reply {
    float: right;
    position: relative;
    bottom: 69px;
    padding: 12px 22px;
    border-radius: 4px;
    background-color: #4a90e2;
    color: red!important;
}
.reply:hover {
    background-color: #9b9b9b;
    text-decoration: none;
}
ul.children {
    margin-left: 100px;
}
li.comment {
    margin-bottom: 80px;
}
.comment-body {
    margin-top: 60px;
    border-bottom: 1px solid #eee;
}
#respond {
    margin-bottom: 50px;
    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
    color: #245e83;
    font-size: 14px;
    font-weight: normal;
}
input,
textarea {
    width: 100%;
    border-radius: 4px;
    background-color: #eee;
    box-shadow: inset 2px -2px 3px 0 #fff;
    border: 1px solid #979797;
}
input[type=text],
input[type=textarea] {
    height: 44px;
}
textarea {
    flex-direction: column;
}
input#submit {
    width: 171px;
    height: 44px;
    float: right;
    background-color: #4a90e2;
    color: #fff;
    border: 0;
    border-radius: 4px;
    box-shadow: none;
}

/*Blog Side Bar */
.sidebar-module.sidebar-module-inset {
    margin-right: 100px;
}
h3.blog-sidebar-title {
    font-size: 24px;
    color: #9b9b9b;
    text-transform: uppercase;
}
#subscribe-text{
    padding: 10px;
    width: 270px;
    border-radius: 6px;
    border: 1px solid #eeeeee;
    font-size: 16px;
    background-color: #fff;
    margin-right: 9px;
}
input#submit-newsletter {
    color: #fff;
    background-color: #4a90e2;
    height: 44px;
    width: 92px;
    border-radius: 4px;
    border: none;
    box-shadow: none;
}
/* Browse / Search */

#browse-header {
    background-color: #0a91ab;
}
#browse-header-search {
    padding-top: 0px;
}
#search-results-total {
    font-size: 24px;
    font-weight: bold;
    padding-left: 115px;
    color: #444;
    margin-bottom: 25px;
}

/* Political Ad*/

.political-ad {
    min-height: 180px;
    padding: 0px 100px;
    margin-bottom: 50px;
}
.political-ad .embed {
    height: 180px;
    float: left;
    background: #000;
}
.political-ad .embed iframe {
    height: 100%;
    width: 100%;
}
.political-ad .title {
    font-size: 18px;
    padding-bottom: 10px;
}
.political-ad .title a,
.political-ad .title a:hover {
    color: #4a90e2;
    font-weight: bolder;
}
.political-ad .browse-label {
    text-transform: uppercase;
}
.political-ad .sponsors {
    color: #9b9b9b;
    font-size: 14px;
}
.political-ad .candidates {
    color: #9b9b9b;
    font-size: 14px;
}

/*REFERENCE GALLERY*/

#reference-gallery-header {
    background-color: #fcb200;
}
#reference-gallery-content {
    padding: 45px 115px;
    background-color: #efefef;
}
.reference {
    background-color: #fff;
    border-top: 20px solid #245e83;
    padding: 0px;
    margin-bottom: 30px;
}
.single-reference { }
.single-reference .reference-image {
	float: left;
	height: 300px;
	margin-right: 15px;
}
.single-reference .reference-image img {
	height: 100%;
}
.first-reference {
}
.first-reference .reference-image {
	display: none;
}
.second-reference .reference-image {
	display: none;
}
.third-reference .reference-image {
	display: none;
}
.fourth-reference .reference-image img{
	width: 100%;
}

.reference-title {
  font-size: 36px;
  color: #245e83;
  font-weight: bold;
  margin: 15px;
}
.reference-description{
    font-size: 18px;
    color:#343434;
    margin: 10px 15px;
}
.reference-date{
    font-size: 14px;
    color: #9b9b9b;
    margin: 10px 15px;
    text-transform: uppercase;
}
.reference-logo {
	text-align: right;
}
.reference-logo img {
    max-height: 70px;
    margin: 15px;
}
.reference-image {

}

